--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^5.0.0-beta.5",
+    "@mui/material": "^5.0.1",
+    "@mui/styles": "^5.0.1",
+    "material-ui": "^1.0.0-beta.47",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
